--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -30,6 +30,7 @@ modules:
         - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
     install:
       packages:
+        - https://code.visualstudio.com/sha/download?build=stable&os=linux-rpm-x64
         - podman-remote
         - podman-docker
         - distrobox
@@ -86,8 +87,7 @@ modules:
         install: [] # system flatpaks we want all users to have and not remove
       - scope: user # Also add Flathub user repo, but no user packages
 
-  # - type: script
-  #   snippets:
-  #     - "rm /usr/share/backgrounds/gnome/pride*"
-  #     - "rm /usr/share/backgrounds/gnome/progress*"
+  - type: script
+    snippets:
+      - "rm /usr/share/backgrounds/gnome/*"
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
